# fastapi-mongodb-booking-meeting-rooms

./: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
src/: config.py  main.py
src/apps/meeting_rooms/: dependensies.py  enums.py  repository.py  service.py
src/apps/meeting_rooms/routers/: __init__.py  booking.py  local_router.py  schedule.py
src/apps/meeting_rooms/schemas/rooms/: base.py  create.py  out.py
src/apps/users/: models.py  repository.py  schemas.py
src/apps/users/routers/: __init__.py  auth.py  local_router.py
src/apps/users/services/: auth.py  user.py
src/common/schemas/: insert_one_result.py
src/databases/mongodb/: connection.py
src/databases/postgresql/: _prepare_db.py  connection.py  dependencies.py
tests/: .test.example.env  conftest.py
tests/meeting_rooms/: test_booking.py  test_schedule.py
